bootstrap css added

--- a/samples/app11-javascript-oidc/nginx/html/callback.html
+++ b/samples/app11-javascript-oidc/nginx/html/callback.html
@@ -3,9 +3,8 @@
 
 <head>
     <title>JavaScript OIDC Callback</title>
-    <script src="js/oidc-client.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"></script>
     <script src="js/oidc-config.js"></script>
-</head>
 
 <body>
     <h1>OIDC Callback</h1>
