--- a/samples/app11-javascript-oidc/nginx/html/index.html
+++ b/samples/app11-javascript-oidc/nginx/html/index.html
@@ -3,18 +3,22 @@
 
 <head>
     <title>JavaScript OIDC Authentication Example</title>
-    <script src="js/oidc-client.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"></script>
     <script src="js/oidc-config.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>JavaScript OIDC Authentication Example</h1>
-    <button id="loginButton">Login</button>
-    <button id="logoutButton" style="display: none">Logout</button>
+    <div style="margin-top: 2em" class="container">
+        <h1>JavaScript OIDC Authentication Example</h1>
+        <button class="btn btn-primary btn-lg" id="loginButton">Login</button>
+        <button class="btn btn-warning btn-lg" id="logoutButton" style="display: none">Logout</button>
 
-    <div id="userInfo" style="display: none">
-        <p><strong>preferred_username:</strong> <span id="username"></span></p>
-        <p><strong>email:</strong> <span id="email"></span></p>
+        <div id="userInfo" style="display: none">
+            <p><strong>preferred_username:</strong> <span id="username"></span></p>
+            <p><strong>email:</strong> <span id="email"></span></p>
+        </div>
     </div>
 
     <script>
@@ -25,7 +29,7 @@
         });
 
         document.getElementById('logoutButton').addEventListener('click', function () {
-            userManager.signoutRedirect();
+            userManager.signoutRedirect( { post_logout_redirect_uri: 'http://app11.dev.sonia.de:8091' } );
         });
 
         userManager.getUser().then(function (user) {
@@ -43,6 +47,9 @@
             }
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
